--- a/assets/css/material-style.css
+++ b/assets/css/material-style.css
@@ -12,16 +12,31 @@ h2 {
     padding-top: 75px;
     padding-bottom: 75px;
     border-radius: 3px;
+    margin-top: 8px;
 }
 
 
 
 @media screen and (max-width: 600px) {
+    html {
+        font-size: 12px;
+    }
     h2 {
         font-size: 3rem;
     }
     .flex-row {
         display: flex;
         flex-direction: column-reverse;
+    }
+
+    .train-header {
+        padding-top:50px;
+        padding-bottom: 50px;
+    }
+}
+
+@media screen and (min-width: 601px) and (max-width: 992px) {
+    html {
+        font-size: 13px;
     }
 }
